<resources>
    <string name="app_name">Musfeat</string>

    <!-- Container -->
    <!-- Toolbar titles -->
    <string name="cards_title">Поиск музыкантов</string>
    <string name="map_title">Карта</string>
    <string name="chat_title">Чат</string>
    <string name="calendar_title">Календарь</string>
    <string name="profile_title">Профиль</string>
    <!-- Navigation titles -->
    <string name="navigation_cards_icon_description">Карточки</string>
    <string name="navigation_map_icon_description">Карта</string>
    <string name="navigation_chat_icon_description">Чат</string>
    <string name="navigation_calendar_icon_description">Календарь</string>
    <string name="navigation_profile_icon_description">Профиль</string>
    <!-- Back button description -->
    <string name="back_btn_description">Button to get back</string>

    <!-- Login -->
    <string name="login_title">Вход</string>
    <string name="login_forget_password">Забыли пароль</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Пароль</string>
    <string name="remember_password">Запомнить пользователя</string>
    <string name="registration_button_registration">Зарегистрироваться</string>

    <!-- Registration -->
    <string name="registration_title">Регистрация</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_name_hint">Ваше имя</string>
    <string name="registration_surname_hint">Ваша фамилия</string>
    <string name="registration_password_hint">Пароль</string>
    <string name="registration_password_repeat_hint">Повторите пароль</string>
    <string name="registration_guitar">Гитара</string>
    <string name="registration_vocal">Вокал</string>
    <string name="registration_drums">Барабаны</string>
    <string name="registration_choose_skills">Выберите ваши навыки:</string>
    <string name="registration_success">Регистрация прошла успешно</string>


    <!-- Calendar -->
    <string name="event_title">Название</string>
    <string name="event_date">Дата</string>

    <!-- Profile -->
    <string name="profile_looking_for">Я ищу:</string>
    <string name="profile_my_skills">Мои навыки:</string>
    <string name="profile_my_location">Моё местонахождение:</string>
    <string name="profile_logout">Выйти из профиля</string>
    <string name="registration_description_hint">Описание вашего профиля</string>
</resources>